--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
   <div class="audio-box">
     <audio id="meuAudio" controls preload="metadata">
-      <source src="COLAR_AQUI_O_ARQUIVO_DO_PODCAST.mp3" type="audio/mpeg">
+      <source src="Como_Cozinhar_Moldou_Nosso_Cérebro_e_Obesidade" type="audio/mpeg">
     </audio>
 
     <div class="speed-bar" id="speedBar">
@@ -345,7 +345,7 @@
   <iframe
     width="700"
     height="394"
-    src="https://www.youtube.com/embed/COLE_AQUI_O_LINK"
+    src="https://youtu.be/Dx8fixj2P4U"
     allowfullscreen>
   </iframe>
 
