--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <body>
 
   <!-- BANNER -->
-  <img src="banner-aula3.png" alt="Banner da Aula 3">
+  <img src="banner2.png" alt="banner2.png">
 
   <h1>Conhecendo Nosso Corpo e a Energia dos Alimentos</h1>
 
