--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <meta charset="UTF-8" />
+  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <style>
+    :root { 
+      --brand: #D5A400;          /* amarelo ouro */
+      --brand-light: #F7E9B0;    /* amarelo claro */
+      --bg-light: #FFFDF4;       /* fundo claro */
+      --text: #333;
+    }
 
     body {
       font-family: Arial, sans-serif;
