--- a/index.html
+++ b/index.html
@@ -351,21 +351,21 @@
   <h2>🎧 Podcast</h2>
 
   <div class="audio-box">
-    <audio id="meuAudio" controls preload="metadata">
-      <source src="Como_Cozinhar_Moldou_Nosso_Cérebro_e_Obesidade.mp3" type="audio/mpeg">
-      Seu navegador não suporta áudio.
-    </audio>
+  <audio id="meuAudio" controls preload="metadata">
+    <source src="podcast-aula3.m4a" type="audio/mp4">
+    Seu navegador não suporta áudio.
+  </audio>
 
-    <div class="speed-bar" id="speedBar">
-      <span>Velocidade:</span>
-      <button class="speed-btn" data-rate="0.75">0,75x</button>
-      <button class="speed-btn" data-rate="1">1x</button>
-      <button class="speed-btn" data-rate="1.25">1,25x</button>
-      <button class="speed-btn" data-rate="1.5">1,5x</button>
-      <button class="speed-btn" data-rate="2">2x</button>
-      <span id="rateNow">(atual: 1x)</span>
-    </div>
+  <div class="speed-bar" id="speedBar">
+    <span>Velocidade:</span>
+    <button class="speed-btn" data-rate="0.75">0,75x</button>
+    <button class="speed-btn" data-rate="1">1x</button>
+    <button class="speed-btn" data-rate="1.25">1,25x</button>
+    <button class="speed-btn" data-rate="1.5">1,5x</button>
+    <button class="speed-btn" data-rate="2">2x</button>
+    <span id="rateNow">(atual: 1x)</span>
   </div>
+</div>
 
 
   <!-- VÍDEO -->
