--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
 
   <!-- PODCAST -->
-  <h2>🎧 Podcast</h2>
+  <h2>🎧 Podcast: Como cozinhar moldou nosso cérebro e obesidade</h2>
 
   <div class="audio-box">
   <audio id="meuAudio" controls preload="metadata">
@@ -369,7 +369,7 @@
 
 
   <!-- VÍDEO -->
-  <h2>📽️ Vídeo</h2>
+  <h2>📽️ Vídeo: Como a evolução explica nossa relação com comida e atividade física</h2>
 
   <iframe
     width="700"
