--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
 
   <!-- PODCAST -->
-  <h2>🎧 Podcast: Como cozinhar moldou nosso cérebro e obesidade</h2>
+  <h2>🎧 Podcast: Como cozinhar mudou o nosso corpo e a nossa relação com a comida</h2>
 
   <div class="audio-box">
   <audio id="meuAudio" controls preload="metadata">
